07/06/2021 - Version 2.1.13: Major update
- Made default complex representation shorter
- Introduced "SCDetails" for longer representation pf complexes
- Removed large complexes from complex library
- Updated manual

28/05/2021 - Version 2.1.12: TEST RELEASE

31/07/2020 - Version 2.1.11: MINOR UPDATE
- First use of gap release tools 
- Changed test file output to accommodate changes in other packages
- Fixed bug in SCIsStackedSphere

03/06/2019 - Version 2.1.10: MINOR UPDATE
- Added generated files to archive
- Added check for executable bistellar
- Deleted README and duplicate GPL file

21/10/2018 - Version 2.1.9: MINOR UPDATE
- Minor changes in documentation/manual
- Adjusted output of test file for GAP 4.10
- Installed gh-pages via GitHubPagesForGAP
- Repaired complex library, removed double entry
- Fixed bug in SCIsLibRepository
- Streamlined building process of binary "bistellar" to comply with BuildPackages.sh

05/02/2018 - Version 2.1.8: MINOR UPDATE
- Minor changes in documentation/manual
- Adjusted output of test file for GAP 4.9

29/09/2017 - Version 2.1.7: Minor update
- Adjusted SCRunTest (simpcomp testing facility)
- Minor changes in documentation/manual
- Added characterisation of tight 3-manifolds to SCIsTight (see https://arxiv.org/abs/1601.00065)
- Fixed bug in SCIsFlag

01/02/2016 - Version 2.1.6: Minor update
- Minor changes in documentation/manual

22/01/2016 - Version 2.1.5: Minor update
- Minor changes in documentation/manual
- Added characterisation of tight 3-manifolds
  to SCIsTight (see https://arxiv.org/abs/1601.00065)

23/12/2015 - Version 2.1.4: Minor update
- Fixed minor bug in SCsFromGroupByTransitivity();

04/06/2015 - Version 2.1.1: Minor update
- Minor changes in documentation/manual

20/05/2015 - Version 2.1.0: Major update, support for discrete 
             Morse theory added
- Fixed bug in SCFVector, non-manifolds where treated like the simplex or the 
  boundary of the simplex