@@ -144,7 +144,7 @@ To test the functionality of <Package>simpcomp</Package> you can run the functio
 
 <Log>
 gap> SCRunTest();
-+ test simpcomp package, Version 2.1.13
++ test simpcomp package, Version 2.1.14
 + GAP4stones: 69988
 true
 gap> 
@@ -171,8 +171,8 @@ If you would like to cite <Package>simpcomp</Package> using BibTeX, you can use 
 @manual{simpcomp,
 	author = "Felix Effenberger and Jonathan Spreer",
 	title  = "{\tt simpcomp} - a {\tt GAP} toolkit for simplicial complexes,
-	          {V}ersion 2.1.13",
-	year   = "2021",
+	          {V}ersion 2.1.14",
+	year   = "2022",
 	url    = "\url{https://github.com/simpcomp-team/simpcomp}",
 }
 </Verb>
@@ -183,8 +183,8 @@ If you are not using BibTeX, you can use the following entry inside the bibliogr
 \bibitem{simpcomp}
 F.~Effenberger and J.~Spreer,
 \emph{{\tt simpcomp} -- a {\tt GAP} toolkit for simplicial complexes},
-Version 2.1.13, 
-2021,
+Version 2.1.14, 
+2022,
 \url{https://github.com/simpcomp-team/simpcomp}.
 </Verb>
 </Section>
